# rust-crate-template

./: .gitignore  CRATE_README.md  Cargo.toml  README.md  setup.fish
config/: config.toml
example/: example.rs
examples/: example.rs
