[package]
name = "crate_name"
version = "0.1.0"
edition = "2021"
description = "Rust crate tempate"
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/crate_name"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carrot_utils = "0.1"
log = "0.4"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
clap = { version = "3.2", features = ["derive"] }
