[package]
name = "crate_name"
version = "0.1.0"
edition = "2021"
description = "Rust crate tempate"
authors = ["scepter914 <scepter914@gmail.com>"]
repository = "https://github.com/scepter914/crate_name"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carrot_utils = "0.1.3"
log = "0.4.20"
toml = "0.8.8"
serde_derive = "1.0.195"
serde = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }
