[package]
name = "crate_name"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "crate_name"
authors = ["scepter914 <scepter914@gmail.com>"]

readme = "README.md"
documentation = "https://docs.rs/crate_name"
repository = "https://github.com/scepter914/crate_name"
categories = [""]
keywords = ["", ""]

exclude = ["data/*"]
publish = false

[dependencies]
carrot_utils = "0.1.6"
log = "0.4.20"
toml = "0.8.8"
serde_derive = "1.0.195"
serde = "1.0.195"
clap = { version = "4.4.18", features = ["derive"] }
